# DDW-N2V-2d

./: .gitignore  ENVIRONMENT_GUIDE.md  N2V_IMPLEMENTATION.md  README.md  check_environment.py  config_example.yaml  install_cuda_torch.sh  pyproject.toml  requirements.txt  run_training.sh  setup_environment.sh  tutorial.ipynb
src/ddw/: __init__.py  app.py  fit_model2.py  fit_n2v_model.py  prepare_data2.py  prepare_n2v_data.py  refine_n2v_tomogram.py  refine_tomogram2.py
src/ddw/utils/: fourier2.py  masked_loss.py  missing_wedge2.py  mrctools2.py  n2v_subtomo_dataset.py  n2v_unet2.py  n2v_utils.py  normalization2.py  rotation2.py  subtomo_dataset2.py  subtomos2.py  unet2.py  visualization.py
